<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Ok (10%)</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>

    <string name="primary_color">Primary color</string>
    <string name="email_icon">email icon</string>
    <string name="round_up_a_tip">Round up a tip?</string>

</resources>